[gd_scene load_steps=20 format=3 uid="uid://b0hp12i56too8"]

[ext_resource type="PackedScene" uid="uid://blth468svkjaq" path="res://GameObjects/RayPickerCamera.tscn" id="1_3o4py"]
[ext_resource type="MeshLibrary" uid="uid://mbshsf5ypr4a" path="res://MeshLibraries/SpaceLibrary.tres" id="1_bo3yr"]
[ext_resource type="PackedScene" uid="uid://cgio16xab0rf" path="res://GameObjects/Enemy.tscn" id="2_5vx1e"]
[ext_resource type="PackedScene" uid="uid://c1iinwkk72ugo" path="res://GameObjects/Base.tscn" id="3_eesb3"]
[ext_resource type="Script" uid="uid://besmvrc8co6vu" path="res://Scripts/enemySpawner.gd" id="3_u2wky"]
[ext_resource type="Script" uid="uid://btm061wtvyf1a" path="res://Scripts/TurretManager.gd" id="5_ftfrf"]
[ext_resource type="PackedScene" uid="uid://cwnwy7uaafk4l" path="res://GameObjects/Turret.tscn" id="6_u2wky"]
[ext_resource type="Script" uid="uid://dwd4mt5m3m28w" path="res://Scripts/Bank.gd" id="8_bkkah"]
[ext_resource type="PackedScene" uid="uid://dxdhm0jx1qa8s" path="res://GameObjects/DifficultyManager.tscn" id="9_xjg0i"]
[ext_resource type="PackedScene" uid="uid://b3ujtvd7mxql0" path="res://GameObjects/UserInterface.tscn" id="10_ykwpl"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_4sal3"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_bo3yr"]
sky_material = SubResource("ProceduralSkyMaterial_4sal3")

[sub_resource type="Environment" id="Environment_5vx1e"]
background_mode = 2
sky = SubResource("Sky_bo3yr")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eesb3"]
albedo_color = Color(0.56078434, 0.6, 0.3019608, 1)

[sub_resource type="Curve3D" id="Curve3D_3o4py"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -26, 0, 6, -1, 0, 1, 1, 0, -1, -14, 0, 6, -0.7, 0, 0.90000004, 0.7, 0, -0.90000004, -14, 0, -2, -0.5, 0, -0.7, 0.5, 0, 0.7, -6, 0, -2, -0.8, 0, -1, 0.8, 0, 1, -6, 0, 2, -0.7, 0, -0.8, 0.7, 0, 0.8, 2, 0, 2, -0.6, 0, -0.90000004, 0.6, 0, 0.90000004, 2, 0, 6, -0.6, 0, 0.6, 0.6, 0, -0.6, 10, 0, 6, -0.7, 0, 0.7, 0.7, 0, -0.7, 10, 0, 2, 0, 0, 0, 0, 0, 0, 22, 0, 2),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 10

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ykwpl"]
albedo_color = Color(0.1323, 0.15295503, 0.27, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fxpm7"]
albedo_color = Color(0.44322586, 0.11455005, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_83eob"]
albedo_color = Color(0.44313726, 0.11372549, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2elnx"]
font_size = 32
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="BaseLevel" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_5vx1e")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
shadow_enabled = true

[node name="RayPickerCamera" parent="." node_paths=PackedStringArray("gridMap", "turretManager") instance=ExtResource("1_3o4py")]
transform = Transform3D(1, 0, 0, 0, 0.42261824, 0.9063078, 0, -0.9063078, 0.42261824, 0, 21.5, 8.5)
gridMap = NodePath("../GridMap")
turretManager = NodePath("../TurretManager")

[node name="Floor" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
material_override = SubResource("StandardMaterial3D_eesb3")
size = Vector3(100, 2, 100)

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("1_bo3yr")
cell_size = Vector3(4, 4, 4)
cell_center_y = false
data = {
"cells": PackedInt32Array(65535, 2, 0, 65530, 0, 1441795, 65530, 2, 0, 4, 2, 1048579, 65534, 2, 0, 65533, 2, 0, 65532, 2, 0, 3, 2, 0, 2, 2, 0, 1, 2, 0, 0, 2, 0, 5, 1, 0, 5, 2, 0, 65530, 65534, 2, 65530, 65535, 0, 5, 65535, 655363, 5, 65534, 1441794, 4, 65534, 0, 3, 65534, 0, 2, 65534, 1441795, 1, 65534, 0, 0, 65534, 0, 65535, 65534, 0, 65534, 65534, 0, 65533, 65534, 0, 65532, 65534, 0, 65531, 65534, 1441795, 65531, 2, 0, 65531, 65535, 0, 65531, 0, 0, 65533, 0, 0, 65533, 1, 0, 65534, 1, 1441794, 65535, 1, 0, 65535, 65535, 0, 0, 65535, 0, 1, 65535, 0, 2, 65535, 0, 3, 65535, 0, 4, 65535, 0, 1, 0, 0, 3, 1, 0, 4, 1, 0, 65530, 65531, 1441794, 1, 65532, 1048578, 3, 65531, 655362, 65534, 65531, 1048578, 65535, 65533, 2, 65532, 65533, 1441794, 65531, 3, 1441794, 1, 65533, 655363, 65533, 65533, 3, 65528, 65532, 1441795, 65529, 65535, 1441794, 65528, 65534, 1441794, 65529, 65534, 1441794, 65528, 65535, 1441794, 65529, 0, 1441794, 65528, 0, 1441794, 65527, 0, 1441794, 65527, 65535, 1441794, 65529, 2, 1441794, 65528, 2, 1441794, 65530, 3, 1441794, 65532, 3, 655362, 65534, 3, 1048578, 65535, 3, 2, 4, 65533, 1441794, 3, 65533, 1441794, 3, 65532, 1441794, 2, 65531, 1441794, 2, 65530, 1441794, 1, 65530, 1441794, 0, 65530, 1441794, 0, 65531, 1441794, 65533, 65531, 1441794, 65532, 65531, 1441794, 65532, 65532, 1441794, 65531, 65531, 1441794, 65531, 65533, 1441794, 65530, 65532, 1441794, 65529, 65533, 1441794, 65530, 65533, 1441794, 7, 65533, 1441794, 7, 65534, 1441794, 6, 65534, 1441794, 7, 65535, 1441794, 7, 0, 1441794, 6, 0, 1441794, 6, 1, 1441794, 6, 2, 1441794, 6, 3, 1441794, 5, 3, 1441794, 4, 3, 1441794, 3, 3, 1441794, 2, 3, 1441794, 1, 3, 1441794, 1, 4, 1441794, 65533, 3, 1441795, 0, 3, 1441795, 2, 65532, 1441795, 4, 65531, 1441795, 5, 65531, 1441795, 6, 65532, 1441794, 6, 65531, 1441794, 7, 65531, 1441794, 7, 65530, 1441794, 6, 65530, 1441794, 5, 65530, 1441794, 5, 65529, 1441794, 9, 65530, 1441794, 9, 65531, 1441794, 9, 65529, 1441794, 9, 65528, 1441794, 65528, 65531, 1441794, 65527, 65531, 1441794, 65526, 65531, 1441794, 65526, 65532, 1441794, 65528, 65529, 1441794, 65529, 65529, 1441794, 65533, 65528, 1441794, 65533, 65527, 1441794, 65532, 65527, 1441794, 65532, 65526, 1441794, 65531, 65527, 1441794, 65531, 65528, 1441794, 1, 65527, 1441794, 1, 65526, 1441794, 2, 65525, 1441794, 3, 65525, 1441794, 3, 65526, 1441794, 3, 65527, 1441794, 65534, 65527, 1441794)
}

[node name="EnemyPath" type="Path3D" parent="." node_paths=PackedStringArray("difficultyManager", "victoryCanvas")]
curve = SubResource("Curve3D_3o4py")
script = ExtResource("3_u2wky")
difficultyManager = NodePath("../DifficultyManager")
enemyScene = ExtResource("2_5vx1e")
victoryCanvas = NodePath("../VictoryCanvasLayer")

[node name="Road" type="CSGPolygon3D" parent="EnemyPath"]
material_override = SubResource("StandardMaterial3D_ykwpl")
polygon = PackedVector2Array(-1, 0, -1, 0.1, 1, 0.1, 1, 0)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 0.5
path_simplify_angle = 0.0
path_rotation = 2
path_rotation_accurate = false
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false

[node name="RoadLeftEdge" type="CSGPolygon3D" parent="EnemyPath"]
material_override = SubResource("StandardMaterial3D_fxpm7")
polygon = PackedVector2Array(-1.2, 0, -1.2, 0.2, -1, 0.2, -1, 0)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 0.5
path_simplify_angle = 0.0
path_rotation = 2
path_rotation_accurate = false
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false

[node name="RoadRightEdge" type="CSGPolygon3D" parent="EnemyPath"]
material_override = SubResource("StandardMaterial3D_83eob")
polygon = PackedVector2Array(1.2, 0, 1.2, 0.2, 1, 0.2, 1, 0)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 0.5
path_simplify_angle = 0.0
path_rotation = 2
path_rotation_accurate = false
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false

[node name="SpawnTimer" type="Timer" parent="EnemyPath"]
wait_time = 2.0
autostart = true

[node name="Base" parent="." instance=ExtResource("3_eesb3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0, 2)
maxHealth = 5

[node name="TurretManager" type="Node3D" parent="." node_paths=PackedStringArray("enemyPath")]
script = ExtResource("5_ftfrf")
enemyPath = NodePath("../EnemyPath")
turret = ExtResource("6_u2wky")

[node name="Bank" type="MarginContainer" parent="." groups=["bank"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("8_bkkah")

[node name="GoldLabel" type="Label" parent="Bank"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Gold: 100"
label_settings = SubResource("LabelSettings_2elnx")

[node name="DifficultyManager" parent="." instance=ExtResource("9_xjg0i")]
gameSpeed = 2.0
gameLength = 180.0

[node name="VictoryCanvasLayer" parent="." instance=ExtResource("10_ykwpl")]

[connection signal="timeout" from="EnemyPath/SpawnTimer" to="EnemyPath" method="SpawnEnemy"]
[connection signal="stopSpawningEnemies" from="DifficultyManager" to="EnemyPath" method="_on_difficulty_manager_stop_spawning_enemies"]
